feat: implement conversion api
